build: publish Java 17 compatible runtime